try to fix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -4,13 +4,14 @@
 /** GLOBAL **/
 html {
     width: 100%;
+	height: 100%;
     margin: 0;
     padding: 0;
     font-size: 16px;
 }
 
 body {
-    height: 100%;
+    min-height: 100%;
     width: 100%;
     max-width: 1440px;
     margin: auto;
